--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "primeicons": "^4.1.0",
+    "primereact": "^6.5.0-rc.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
