--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.8",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primereact": "^6.5.0-rc.2",
     "react": "^17.0.2",
